--- a/css/style.css
+++ b/css/style.css
@@ -3092,4 +3092,11 @@ custom
     .reachout-padding {
         font-size: 65px;
     }
+    #slide-20-layer-11,
+    #slide-27-layer-2 {
+        font-size: 23px !important;
+    }
+    #slide-27-layer-2 {
+        margin-left: -100px;
+    }
 }
